# kingdom-python-server

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: sandbox-deploy.yaml  staging-deploy.yaml  tests.yaml
docker/: entrypoint.sh  init-user-db.sh  migration.sh  test.sh  uvicorn.sh
kingdom/access/: base.py  config.py  dsl.py  flow.py  jwt.py  types.py
kingdom/access/authentication/: authenticator.py  types.py
kingdom/access/authorization/: dsl.py  encode.py  flow.py  model.py  types.py  verify.py
kingdom/access/tests/: test_base.py  test_dsl.py  test_encode.py  test_flow.py  test_verify.py
migrations/: README.md  env.py  script.py.mako  utils.py
migrations/versions/: 4198d2577d59_user_permissions.py  52283d2bf15b_user_table.py  6c26d63cff3f_role_aggregate.py
src/: config.py  federation.py  orm.py
src/auth/: bootstrap.py  config.py  utils.py  views.py
src/auth/adapters/: email_sender.py  orm.py  repository.py
src/auth/domain/: model.py
src/auth/entrypoint/: __init__.py
src/auth/services/: handlers.py  unit_of_work.py
src/core/: bootstrap.py  domain.py  exceptions.py  messagebus.py  utils.py
src/core/access/: authorization.py  test_authorization.py  test_permission.py
src/core/ports/: digesto.py  email_sender.py  (+4 more)
src/observability/: decorator.py  measurer.py  tracer.py
src/server/: app.py  graphql.py
src/serverless/: app.py
tests/: conftest.py  helpers.py  tracing.py
tests/auth/: conftest.py  helpers.py
tests/fakes/: auth.py
(+26 files in other folders)
