[tool.poetry]
name = "apolo-backend"
version = "0.1.0"
description = "Apolo as the greek sun god, also known as the prophecy and justice god, this system helps enlight NPL cases manegement"
authors = ["Rafael Melo <rafael@t10.digital>", "Gabriel Cocenza <gabriel.cocenza@t10.digital>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
ariadne = {extras = ["asgi-file-uploads"], version = "^0.12.0"}
starlette = "<0.14"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
alembic = "^1.4.3"
boto3 = "^1.16.30"
pytest = "^6.1.2"
requests = "^2.25.0"
flake8 = "^3.8.4"
mypy = "^0.790"
Faker = "^5.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^6.2.0"
pytest-asyncio = "^0.14.0"
PyJWT = "^1.7.1"
emails = "^0.6"
unidecode = "^1.1.2"
rapidfuzz = "^0.14.2"
poetry = "^1.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.19.0"
flake8-print = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
